# uCurses

./: .clang-format  .gitignore  AUTHORS  COPYING  ChangeLog  GETTING_STARTED.md  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.das  NEWS  README  README.md  USING-uCurses.md  arch-build.sh  border.c  build-das.sh  build.sh  clang-tidy.sh  color.c  configure.ac  generic.makefile  keys.c  list.c  main.c  makefile  menu_vectors  meson.build  meson_options.txt  parse.c  scrdisp.c  screen.c  smush.c  template.jason  template.json  tifile.c  tui.c  uCurses.md  uCurses.txt  (+5 more)
example/: Makefile  attr_defs.c  base.json  borders.c  console.c  demo.h  demo1.c  demo1.json  dots.c  dots.json  example.json  hello.c  lion.c  list_demo.c  main.c  mandel.c  menus.c  meson.build  raycast.c  scroll.c  shapes.c  shell.c  sintab.c  widgets.c  window.c  wtest.c
example/json/: borders.json  dots.json  main.json  window.json  wtest.json
h/: assert.h  border.h  borders.h  color.h  json.h  list.h  menus.h  parse.h  re_switch.h  screen.h  terminfo.h  tui.h  uC_alloc.h  uC_attribs.h  uC_borders.h  uC_braille.h  uC_json.h  uC_keys.h  uC_list.h  uC_menus.h  uC_mouse.h  uC_parse.h  uC_screen.h  uC_status.h  uC_switch.h  uC_terminfo.h  uC_ti_file.h  uC_utf8.h  uC_utils.h  uC_widgets.h  uC_win_printf.h  uC_window.h  uCurses.h  uCurses_types.h  utf8.h  util.h  utils.h  win_printf.h  window.h
packaging/linux/distro/arch/: meson.build
src/: attribs.c  border.c  braile.c  braille.c  color.c  entry.c  json.c  json_build.c  json_key.c  json_populate.c  json_token.c  json_value.c  keys.c  list.c  main.c  menus.c  parse.c  re_switch.c  reswitch.c  rgb_hsl.c  screen.c  tifile.c  uC_alloc.c  uC_attribs.c  uC_border.c  uC_braille.c  uC_entry.c  uC_list.c  uC_rgb_hsl.c  uC_screen.c  uC_status.c  uC_switch.c  uC_utf8.c  uC_util.c  uC_utils.c  uC_win_printf.c  uC_window.c  uCurses.c  ui_json.c  utf8.c  (+3 more)
src/TEST/: border.c  braille.c  color.c  deleteme.c  entry.c  json.c  json_build.c  json_key.c  json_populate.c  json_token.c  json_value.c  keys.c  list.c  main.c  menus.c  parse.c  reswitch.c  screen.c  tifile.c  ut_parse.c  utf8.c  util.c  win_printf.c  window.c
src/json/: json.c  json_build.c  json_key.c  json_populate.c  json_schema.c  json_token.c  json_value.c  uC_json.c  uC_json_build.c  uC_json_key.c  uC_json_populate.c  uC_json_value.c
src/keys/: key_read.c  key_sequence.c  key_table.c  uC_key_read.c  uC_key_sequence.c  uC_key_table.c  uC_shortcuts.c
src/menus/: menu_bar.c  menu_item.c  menu_key.c  menu_pulldown.c  status.c  uC_menu_bar.c  uC_menu_item.c  uC_menu_key.c  uC_pulldown.c  uC_status.c
src/terminfo/: parse.c  terminfo.c  ti_file.c  uC_attribs.c  uC_console_attribs.c  uC_mouse.c  uC_terminfo.c  uC_ti_file.c  uC_ti_parse.c
src/ui/: uC_border.c  uC_screen_ctrl.c  uC_screen_draw.c  uC_screen_resize.c  uC_status.c  uC_window_attr.c  uC_window_ctrl.c  uC_window_draw.c
src/ui/menus/: uC_menu_bar.c  uC_menu_item.c  uC_menu_key.c  uC_menu_pulldown.c  uC_menu_shortcut.c
src/ui/widgets/: uC_widget.c  uC_widget_button.c  uC_widget_check.c  uC_widget_draw.c  uC_widget_keys.c  uC_widget_mouse.c  uC_widget_radio.c  uC_widget_scan.c  uC_widget_text.c  uC_widget_textbox.c  uC_widget_view.c  uC_widget_view_group.c
src/utils/: uC_alloc.c  uC_braille.c  uC_entry.c  uC_eval.c  uC_list.c  uC_rgb_hsl.c  uC_switch.c  uC_utf8.c  uC_utils.c  uC_win_printf.c  uC_winch.c
test/: meson.build  test_alloc.c  test_braille.c  test_fnv.c  test_list.c  test_smoke.c  test_utf8.c  test_widget_horizontal.c  test_widget_layout.c  test_window_wide.c
